# personal-finance-v2

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
agent-docs/: coding_conventions.md
docs/plans/: 2026-01-01-personal-finance-dashboard-design.md  2026-01-01-personal-finance-dashboard-implementation.md  2026-01-02-fire-dashboard-design.md  2026-01-02-fire-dashboard-implementation.md  2026-02-06-phase6-polish-deploy.md
scripts/: generate-demo-data.mjs  migrate_personal_finance.py
src/personal_finance/: __init__.py  app.py  theme.py
src/personal_finance/assets/: styles.css
src/personal_finance/components/: __init__.py  cards.py  fire.py  income.py  layout.py  networth.py  spending.py  summary.py
src/personal_finance/data/: __init__.py  loader.py
src/personal_finance/transforms/: __init__.py  fire.py  income.py  networth.py  savings.py  spending.py
static-site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
static-site/public/: coi-serviceworker.js
static-site/src/: App.svelte  app.css  main.ts
static-site/src/lib/: theme.ts
static-site/src/lib/components/: EmptyState.svelte  ErrorDisplay.svelte  FileUpload.svelte  Header.svelte  SettingsModal.svelte  TabBar.svelte  index.ts
static-site/src/lib/data/: database.ts  loader.ts  types.ts
static-site/src/lib/stores/: data.ts  settings.svelte.ts  theme.svelte.ts  theme.ts
static-site/src/lib/transforms/: fire.ts  income.ts  networth.ts  savings.ts  spending.ts
static-site/src/types/: plotly.d.ts
(+22 files in other folders)
