[project]
name = "personal-finance"
version = "0.1.0"
description = "Personal finance dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=2.0.4",
    "plotly>=5.24.0",
    "polars>=1.0.0",
    "scipy>=1.0.0",
    "xlsx2csv>=0.8.0",
]

[project.scripts]
finance-dashboard = "personal_finance.app:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/personal_finance"]
